<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/help_toolbar"
            layout="@layout/toolbar"/>

        <TextView
            android:id="@+id/app_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_place_red"
            android:drawablePadding="20dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/warning_level_very_high"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_place_orange"
            android:drawablePadding="20dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/warning_level_high"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_place_yellow"
            android:drawablePadding="20dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/warning_level_medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_place_green"
            android:drawablePadding="20dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/warning_level_low"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_place_light_gray"
            android:drawablePadding="20dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/warning_level_none"/>

        <TextView
            android:id="@+id/view_limits_and_historical_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"/>

    </LinearLayout>

</ScrollView>
